--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /kafkagw
 /kafkagw-client
 /kafkagw-slackbot
+/kafkagw-socketio
 
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
